@@ -35,6 +35,10 @@ INCLUDES = \
 	-DGNOMECC_DATA_DIR="\"$(pkgdatadir)\"" \
 	-DGNOMECC_GLADE_DIR="\"$(pkgdatadir)/glade\"" \
 	-DGNOMECC_KEYBINDINGS_DIR="\"$(pkgdatadir)/keybindings\""
-CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES) $(Desktop_in_files) $(desktop_DATA)
+CLEANFILES = \
+	$(GNOMECC_CAPPLETS_CLEANFILES) \
+	$(Desktop_in_files) \
+	$(desktop_DATA) \
+	$(xml_DATA)
 EXTRA_DIST = $(Glade_DATA) $(xml_in_files) gnome-keybindings.pc.in
 
