@@ -1,3 +1,7 @@
+2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Distcheck fixes.
+
 2007-08-05  Bastien Nocera  <hadess@hadess.net>
 
 	reviewed by: Jens Granseuer <jensgr@gmx.net>
